--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
             <div class='div2'>
                 <form action="{{ url_for('predict') }}" method="POST">
                     <!-- Batting Team Dropdown -->
-                    <select class="form-input align-center" name="batting-team">
+                    <select class="form-input align-center" name="batting-team" required="required">
                         <option value="none">--- Select a Batting team ---</option>
                         <option value="Mumbai Indians">Mumbai Indians</option>
                         <option value="Kolkata Knight Riders">Kolkata Knight Riders</option>
@@ -80,7 +80,7 @@
                         <option value="Gujarat Titans">Gujarat Titans</option>
                     </select><br>
                     <!-- Bowling Team Dropdown -->
-                    <select class="form-input align-center" name="bowling-team">
+                    <select class="form-input align-center" name="bowling-team" required="required">
                         <option value="none">--- Select a Bowling team ---</option>
                         <option value="Mumbai Indians">Mumbai Indians</option>
                         <option value="Kolkata Knight Riders">Kolkata Knight Riders</option>
@@ -93,7 +93,7 @@
                         <option value="Gujarat Titans">Gujarat Titans</option>
                     </select><br>
                      <!-- Venue Dropdown -->
-                     <select class="form-input align-center" name="venue">
+                     <select class="form-input align-center" name="venue" required="required">
                          <option value="none">--- Select a Venue ---</option>
                          <option value="M Chinnaswamy Stadium">M Chinnaswamy Stadium</option>
                          <option value="Eden Gardens">Eden Gardens</option>
@@ -117,11 +117,11 @@
                          <option value="Sharjah Cricket Stadium">Sharjah Cricket Stadium</option>
                      </select><br>
                      
-                    <input class="form-input" type="text" name="overs" placeholder="Overs (>= 5.0) eg. 7.2"><br>
-                    <input class="form-input" type="text" name="runs" placeholder="Runs eg. 64"><br>
-                    <input class="form-input" type="text" name="wickets" placeholder="Wickets eg. 4"><br>
-                    <input class="form-input" type="text" name="runs_in_prev_5" placeholder="Runs scored in previous 5 Overs eg. 42"><br>
-                    <input class="form-input" type="text" name="wickets_in_prev_5" placeholder="Wickets taken in previous 5 Overs eg. 3"><br>
+                    <input class="form-input" type="text" name="overs" required="required" placeholder="Overs (>= 5.0) eg. 7.2"><br>
+                    <input class="form-input" type="text" name="runs" required="required" placeholder="Runs eg. 64"><br>
+                    <input class="form-input" type="text" name="wickets" required="required" placeholder="Wickets eg. 4"><br>
+                    <input class="form-input" type="text" name="runs_in_prev_5" required="required" placeholder="Runs scored in previous 5 Overs eg. 42"><br>
+                    <input class="form-input" type="text" name="wickets_in_prev_5" required="required" placeholder="Wickets taken in previous 5 Overs eg. 3"><br>
 
 			<input type="submit" class="myButton" value="Predict Score">
         	</form>
